Edited button expansion size to prevent overlap

--- a/main.css
+++ b/main.css
@@ -61,7 +61,7 @@
 }
 
 .btn:hover span {
-	padding-right: 10px;
+	padding-right: 5px;
 	padding-left: 5px;
 	background-size: contain;
 	background-position: left;
@@ -69,7 +69,7 @@
 
 .btn:hover span:after {
 	opacity: 1;
-	right: 0;
+	right: -5px;
 }
 
 /*Profile Pic*/
